--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "proxy": "https://auto-mate-mern-app-glrn.vercel.app",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
