--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
